# CompetitiveProgramming

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cmake-tools-kits.json  format_all.py
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang-format-check.yml  encoding_tests.yml  label-pr.yml  tests.yml
codeForces/: 1560B.cc
codeForces/0-1000/: 1353B.cc  1472A.cc  1472B.cc  1560A.cc  1560B.cc  1560C.cc  1566A.cc  1566B.cc  1566C.cc  1604A.cc  1612A.cc  1614B.cc  1618B.cc  236A.cc
codeForces/contests/eduRound119/: Awrong.cc  C.cc  D.cc  E.cc
codeForces/contests/eduRound120/: Along.cc  B.cc  C.cc  CattemptTwo.cc
codeForces/contests/globalRound18/: B.cc  Bwrong.cc
codeForces/contests/hello2022/: A.cc  AtestTool.cc  B.cc
codeForces/contests/round#761Div2/: A.cc  AWrong.cc  C.cc
codeForces/contests/round360Div3/: A.cc  B.cc
codeForces/contests/round764div3/: B.cc
code_forces/0-1000/: 1566B.cc  1614A.cc  760A.cc
code_forces/contests/eduRound120/: A.cc
code_forces/contests/goodBye2021/: B.cc
code_forces/contests/hello2022/: Bdnf.cc
code_forces/contests/round#761Div2/: C.cc
codeforces/0-1000/: 1348A.cc  1353B.cc  1472A.cc  1512A.cc  151A.cc  1560B.cc  1566A.cc  1623A.cc  1637A.cc
codeforces/contests/eduRound119/: B.cc  D.cc
codeforces/contests/eduRound120/: C.cc  Cwrong.cc
codeforces/contests/globalRound18/: A.cc
codeforces/contests/hello2022/: A.cc  Arework.cc  Btle.cc
codeforces/contests/round#761Div2/: AWrong2.cc  B.cc
codeforces/contests/round124div2/: A.cc  B.txt
codeforces/contests/round360Div3/: B.cc  C.cc
codeforces/contests/round756div3/: A.cc
codeforces/contests/round762Div3/: A.cc  B.cc
codeforces/contests/round764div3/: A.cc  B.cc
codeforces/contests/round766div2/: A.cc  B.cc  C.cc
codeforces/round765div2/: A.cc
contests/codeforces/eduRound119/: A.cc  A.cpp  Areworked.cc  Awrong.cc  B.cc  Breworked.cc  C.cc  C.cpp  Creworked.cc  D.cpp  E.cc
contests/codeforces/eduRound120/: A.cc  Along.cpp  B.cpp  Bwrong.cc  C.cpp  CattemptTwo.cpp  Cwrong.cc
contests/codeforces/globalRound18/: A.cpp  B.cpp  Bwrong.cc
contests/codeforces/goodBye2021/: A.cc  B.cc  Bwrong.cc
contests/codeforces/hello2022/: A.cc  (+6 more)
cpl/: CMakeLists.txt
cpl/inc/: container.h  core.h  debug.h  ecmath.h  matrix.h  mod.h  ostream_overloads.h  output_container.h  output_matrix.h  sort.h
cpl/src/: output_empty_matrix.cpp
docs/: style_guide.md
docs/container/: alternating_insertion.md  encoding.md
docs/matrix/: uniform_matrix.md
docs/templates/: templates.md
docs/tools/: dbg.md
extendedCmath/: modulo.hpp  templateAbs.hpp
extended_cmath/: long_factorials.cc  mod_type.cc  modulo.hpp
hackerrank/basic/: array_sum.cc
hackerrank/medium/: extra_long_factorials.cc
matrix/: basic_matrix.cc
mod/: mod_type.cc  static_mod_type.cc
other/: encoding.hpp  y_combinator_result.hpp
output_stream/: ostream_container.hpp  ostream_pairs.cc  ostream_pairs.hpp  output_container.cc  output_empty_matrix.cc  print_empty_matrix.hpp  print_iterable.hpp  print_matrix.hpp  print_pairs.hpp
pythonDBG/: compiler.py
python_dbrun/: compair.py  compileInConsole.py  compileWithoutDbg.py  compileithTxt.py  compiler.py
references/: type_sizes.md
scripts/: README.md
sorting/: merge_sort.hpp
src/container/: alternating_insertion.cpp  encoding.cc  encoding.cpp  for_each.cc  to_set.cc  to_set.cpp
src/extended_cmath/: int24.cc  long_factorials.cc  long_factorials.cpp
src/matrix/: basic_uniform_matrix.h  matrix_algorithms.cpp  new_uniform_matrix.cc  uniform_matrix.cc  uniform_matrix.h  v2-uniform_matrix.h
src/mod/: mod_type.cc  static_mod_type.cc
src/other/: encoding.cc  y_combinator_result.cc  y_combinator_result.cpp
src/output_stream/: ostream_container.cc  ostream_container.cpp  ostream_pairs.cc  output_container.cc  output_empty_matrix.cc  output_matrix.cpp
src/sorting/: merge_sort.cpp  merge_sort.hpp  reverse_sort.cc  reverse_sort.cpp  reverse_sort.hpp
src/string/: to_set.cc
src/tools/: README.md  dbg.cc  dbg.cpp
string/: to_set.hpp
templates/: blank_template.cc  blank_template.cpp  codeForces.cc  code_forces.cc  code_forces.cpp  dbg.cpp  facebook_hacker_group.cc  fbHackerGroup.cc  fbHackerGroup.cpp  googleCodeJam.cc  google_code_jam.cc  hackerRank.cc  hacker_rank.cc  printMatrix.hpp  printPairs.hpp  revSort.cpp  revSort.hpp
templates/math/: maxOfTwoD.hpp
tests/: CMakeLists.txt  clang_format_test.py  run_tests.py  test.py  test_scripts.py
tests/container/: alternating_insertion.test.cpp  encoding.test.cc  encoding.test.cpp  to_set.test.cc  to_set.test.cpp
tests/cpl/: CMakeLists.txt
tests/cpl/container_alternating_insertion/: test.compile.run.cpp
tests/cpl/container_encoding/: test.compile.run.cpp  test.complie.run.cpp
tests/cpl/container_is_container_validation/: test.compile.pass.cpp
tests/cpl/container_merge_sort/: test.compile.run.cpp
tests/cpl/container_range_merge_sort/: test.compile.run.cpp
tests/cpl/container_range_rev_sort/: test.compile.run.cpp
tests/cpl/container_rev_sort/: test.compile.run.cpp
tests/cpl/container_to_set_conversions/: test.compile.run.cpp  test.complie.run.cpp
tests/cpl/matrix_trace/: test.compile.run.cpp
tests/cpl/output_container/: test.compile.run.cpp
tests/cpl/sort_container_merge_sort/: test.compile.run.cpp
tests/cpl/sort_container_rev_sort/: test.compile.run.cpp
tests/cpl/sort_range_merge_sort/: test.compile.run.cpp
tests/cpl/sort_range_rev_sort/: test.compile.run.cpp
tests/inc/: CMakeLists.txt
tests/other/: encoding.test.cc  other.test.py
tools/: clang_format_all.py  create_cmake_tests.py  dbg.cc  dbg.hpp  findInList.hpp  mergeSort.hpp  no_std_dbg.hpp  printEmptyMatrix.hpp  printList.hpp  printMatrix.hpp  printPairs.hpp  revSort.hpp  testListInList.hpp  testPairs.hpp  testSet.hpp  test_pairs.hpp  trace.hpp
tools/math/: templateAbs.hpp
tools/scripts/: create_cmake_tests.py
(+230 files in other folders)
